--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.14.5",
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-bootsplash": "^3.2.4",
     "react-native-fast-image": "^8.3.6",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
