--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-bootsplash": "^3.2.4",
     "react-native-fast-image": "^8.3.6",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0"
